--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solidjs/start": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dat.gui": "^0.7.9",
     "lucide-react": "^0.477.0",
     "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
@@ -28,8 +29,10 @@
     "node": ">=22"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "sass-embedded": "^1.85.1",
     "tailwindcss": "^3.3.5"
   }
 }
