--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
     "react-element-to-jsx-string": "^17.0.0",
+    "simplex-noise": "^4.0.3",
     "solid-app-router": "^0.4.2",
     "solid-js": "^1.9.5",
     "solid-motionone": "^1.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "vinxi": "^0.5.3"
+    "vinxi": "^0.5.3",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "engines": {
     "node": ">=22"
