--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dat.gui": "^0.7.9",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.477.0",
     "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
