--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\Matteo\Desktop\Folder icons (ico)\Code.ico,0
+IconResource=C:\Users\Pallassini\Desktop\icons folders\macos-folder-blue256x256.ico,0
 [ViewState]
 Mode=
 Vid=
