--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "example-basic",
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev --host ",
+    "dev": "vinxi dev --host",
     "build": "vinxi build",
     "start": "vinxi start",
     "version": "vinxi version"
@@ -45,11 +45,12 @@
     "node": ">=22"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/dat.gui": "^0.7.13",
     "@types/pg": "^8.11.11",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.3",
     "sass-embedded": "^1.85.1",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.17"
   }
 }
