--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ DB_USER = matteo
 DB_PASSWORD = matt9946
 DB_PORT = 5432
 DB_NAME = pulsix 
+
+#sessions & cookie
+SESSION_SECRET = 1BQCND5KEtmSVXj0A/VqfD168HoXxlrfZvMsjwWKmMc=
