--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie-session": "^2.1.0",
     "dat.gui": "^0.7.9",
     "firebase": "^11.5.0",
     "gsap": "^3.12.7",
