--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@suid/system": "^0.13.0",
     "@suid/types": "^0.7.1",
     "@suid/vite-plugin": "^0.3.1",
+    "@thednp/solid-color-picker": "^0.0.13",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +35,7 @@
     "react-element-to-jsx-string": "^17.0.0",
     "simplex-noise": "^4.0.3",
     "solid-app-router": "^0.4.2",
+    "solid-color": "^0.0.4",
     "solid-js": "^1.9.5",
     "solid-motionone": "^1.0.3",
     "tailwind-merge": "^3.0.2",
