--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+#impostare su production se sono in produzione
+ENV = development
+
+
+
 # le var che voglio esporre sul client devono avere il prefisso VITE_ oppure PUBLIC_
 # recupero con: import.meta.env.VITE_BREVO_API_KEY
 #brevo key
@@ -13,3 +18,40 @@ DB_NAME = pulsix
 
 #sessions & cookie
 SESSION_SECRET = 1BQCND5KEtmSVXj0A/VqfD168HoXxlrfZvMsjwWKmMc=
+
+
+#---Auth---
+# Generato casualmente (32 bytes -> 44 caratteri URL-safe Base64)
+JWT_SECRET=oYUTOlZa9EYmjbwWTfRUyoePWGUfze3KPo+UUU65YsI=
+
+# Identificativo dell'applicazione che emette i token (personalizzalo)
+JWT_ISSUER=pulsix
+
+# Scadenza del token di accesso in secondi (15 minuti)
+ACCESS_TOKEN_EXPIRY=900
+
+# Scadenza del token di refresh in secondi (14 giorni)
+REFRESH_TOKEN_EXPIRY=1209600
+
+# --- Cookie Settings ---
+# Segreto usato per firmare/criptare i cookie di sessione o altri cookie sicuri.
+# Generato casualmente (32 bytes -> 44 caratteri URL-safe Base64)
+COOKIE_SECRET=R1KySOepRKTwMNXEDe9Jeo5G6L5SEVeS+/FBc4i2XsA=
+
+# --- Password Hashing ---
+# Costo computazionale per bcrypt (un valore tra 10 e 14 è generalmente raccomandato)
+BCRYPT_COST=12
+
+# --- Rate Limiting ---
+# Numero massimo di richieste consentite per finestra temporale
+RATE_LIMIT_MAX=100
+
+# Finestra temporale per il rate limiting in secondi (15 minuti)
+RATE_LIMIT_WINDOW=900
+
+# --- Account Lockout ---
+# Numero massimo di tentativi di login falliti prima del blocco dell'account
+MAX_FAILED_ATTEMPTS=5
+
+# Durata del blocco dell'account in secondi (15 minuti)
+LOCKOUT_TIME=900
