--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@suid/vite-plugin": "^0.3.1",
     "@thednp/solid-color-picker": "^0.0.13",
     "axios": "^1.8.3",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,10 +30,14 @@
     "dat.gui": "^0.7.9",
     "firebase": "^11.5.0",
     "gsap": "^3.12.7",
+    "h3": "^1.15.1",
+    "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
     "pg": "^8.14.1",
+    "pulsix": "file:../PulsixSdk",
     "react-element-to-jsx-string": "^17.0.0",
     "simplex-noise": "^4.0.3",
     "solid-app-router": "^0.4.2",
@@ -42,6 +47,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2",
+    "uuid": "^11.1.0",
     "vinxi": "^0.5.3",
     "vite": "^6.2.2",
     "vite-plugin-node-polyfills": "^0.23.0",
@@ -54,6 +60,7 @@
     "@tailwindcss/postcss": "^4.0.14",
     "@types/bcryptjs": "^3.0.0",
     "@types/dat.gui": "^0.7.13",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.11.11",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.5.3",
