--- a/.env
+++ b/.env
@@ -16,11 +16,17 @@ DB_PASSWORD = matt9946
 DB_PORT = 5432
 DB_NAME = pulsix 
 
-#sessions & cookie
+#session 
 SESSION_SECRET = 1BQCND5KEtmSVXj0A/VqfD168HoXxlrfZvMsjwWKmMc=
 
 
 #---Auth---
+
+# --- Cookie Settings ---
+# Segreto usato per firmare/criptare i cookie di sessione o altri cookie sicuri.
+# Generato casualmente (32 bytes -> 44 caratteri URL-safe Base64)
+COOKIE_SECRET=R1KySOepRKTwMNXEDe9Jeo5G6L5SEVeS+/FBc4i2XsA=
+
 # Generato casualmente (32 bytes -> 44 caratteri URL-safe Base64)
 JWT_SECRET=oYUTOlZa9EYmjbwWTfRUyoePWGUfze3KPo+UUU65YsI=
 
@@ -32,11 +38,6 @@ ACCESS_TOKEN_EXPIRY=900
 
 # Scadenza del token di refresh in secondi (14 giorni)
 REFRESH_TOKEN_EXPIRY=1209600
-
-# --- Cookie Settings ---
-# Segreto usato per firmare/criptare i cookie di sessione o altri cookie sicuri.
-# Generato casualmente (32 bytes -> 44 caratteri URL-safe Base64)
-COOKIE_SECRET=R1KySOepRKTwMNXEDe9Jeo5G6L5SEVeS+/FBc4i2XsA=
 
 # --- Password Hashing ---
 # Costo computazionale per bcrypt (un valore tra 10 e 14 è generalmente raccomandato)
