--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^11.5.0",
     "gsap": "^3.12.7",
     "h3": "^1.15.1",
+    "ioredis": "^5.6.1",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
