--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
     "pg": "^8.14.1",
-    "pulsix": "file:../PulsixSdk",
+    "pulsix": "^1.0.3",
+    "pulsix-solid": "^1.0.15",
     "react-element-to-jsx-string": "^17.0.0",
     "simplex-noise": "^4.0.3",
     "solid-app-router": "^0.4.2",
     "solid-color": "^0.0.4",
     "solid-js": "^1.9.5",
     "solid-motionone": "^1.0.3",
+    "solid-start": "^0.3.11",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.2",
