--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@suid/types": "^0.7.1",
     "@suid/vite-plugin": "^0.3.1",
     "@thednp/solid-color-picker": "^0.0.13",
+    "@thisbeyond/solid-dnd": "^0.7.5",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie-session": "^2.1.0",
+    "csv-parse": "^5.6.0",
     "dat.gui": "^0.7.9",
     "firebase": "^11.5.0",
     "gsap": "^3.12.7",
@@ -37,6 +39,7 @@
     "lucide-react": "^0.477.0",
     "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
+    "papaparse": "^5.5.2",
     "pg": "^8.14.1",
     "pulsix": "^1.0.3",
     "pulsix-solid": "^1.0.15",
@@ -64,6 +67,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/dat.gui": "^0.7.13",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/papaparse": "^5.3.15",
     "@types/pg": "^8.11.11",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.5.3",
