--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "vinxi": "^0.5.3",
     "vite": "^6.2.2",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-solid": "^2.11.6"
+    "vite-plugin-solid": "^2.11.6",
+    "zod": "^3.24.3"
   },
   "engines": {
     "node": ">=22"
